--- a/src/public/styles/scss/layouts/_responsive.scss
+++ b/src/public/styles/scss/layouts/_responsive.scss
@@ -18,6 +18,10 @@
       right: -3rem;
       top: -2rem;
     }
+
+    .wrapper {
+      gap: 4rem;
+    }
   }
   .main {
     &__container {
